[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shodan_downloader"
version = "0.1.0"
description = "A modern Python tool for searching Shodan and exporting filtered results."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "shodan>=1.28.0",
]